--- a/day_3/day3_assignment.ipynb
+++ b/day_3/day3_assignment.ipynb
@@ -316,6 +316,372 @@
     "        print(f\"At x = {x}, y is equal to 0.\")\n",
     "        break # breaks the loop when y = 0\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "FALSY COMPARISON"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The length of 'python' is 6\n",
+      "The length of 'dragon' is 6\n",
+      "The lengths are not equal: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "length_python = len('python')\n",
+    "length_dragon = len('dragon')\n",
+    "\n",
+    "# Falsy comparison\n",
+    "falsycomparison = length_python != length_dragon\n",
+    "\n",
+    "# Display the lengths and the falsy comparison result\n",
+    "print(f\"The length of 'python' is {length_python}\")\n",
+    "print(f\"The length of 'dragon' is {length_dragon}\")\n",
+    "print(f\"The lengths are not equal: {falsycomparison}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CHECK IF \"ON\" IS IN BOTH DRAGON AND PYTHON"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'on' in 'python': True\n",
+      "'on' in 'dragon': True\n",
+      "Both 'python' and 'dragon' contain 'on': True\n"
+     ]
+    }
+   ],
+   "source": [
+    "is_on_in_python = 'on' in 'python'\n",
+    "is_on_in_dragon = 'on' in 'dragon'\n",
+    "\n",
+    "# and operator is used for the conditions\n",
+    "both_have_on = is_on_in_python and is_on_in_dragon\n",
+    "\n",
+    "# Display the results\n",
+    "print(\"'on' in 'python':\",is_on_in_python)\n",
+    "print(\"'on' in 'dragon':\", is_on_in_dragon)\n",
+    "print(\"Both 'python' and 'dragon' contain 'on':\", both_have_on)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CHECK IF JARGON IS IN SENTENCE GIVEN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'I hope this course is not full of jargon' contains the word 'JARGON':  True\n"
+     ]
+    }
+   ],
+   "source": [
+    "jargon_in_sentence = \"jargon\" in \"I hope this course is not full of jargon\"\n",
+    "\n",
+    "# print result\n",
+    "print(\"'I hope this course is not full of jargon' contains the word 'JARGON': \", jargon_in_sentence)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "USING THE NOT OPERATOR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'on' is not in 'python': False\n",
+      "'on' is not in 'dragon': False\n",
+      "Both 'python' and 'dragon' does not contain 'on': False\n"
+     ]
+    }
+   ],
+   "source": [
+    "on_not_in_python = 'on' not in 'python'\n",
+    "on_not_in_dragon = 'on' not in 'dragon'\n",
+    "\n",
+    "# not operator is used for the conditions\n",
+    "both_have_no_on = on_not_in_python and on_not_in_dragon\n",
+    "\n",
+    "# Display the results\n",
+    "print(\"'on' is not in 'python':\",on_not_in_python)\n",
+    "print(\"'on' is not in 'dragon':\", on_not_in_dragon)\n",
+    "print(\"Both 'python' and 'dragon' does not contain 'on':\", both_have_no_on)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CONVERT TO FLOAT AND STRING"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of 'python': 6\n",
+      "Length as float: 6.0\n",
+      "Length as string: 6.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "len_of_python = len('python')\n",
+    "\n",
+    "# Convert to float and string\n",
+    "len_as_float = float(len_of_python)\n",
+    "len_as_string = str(len_as_float)\n",
+    "\n",
+    "# Display the results\n",
+    "print(\"Length of 'python':\", len_of_python)\n",
+    "print(\"Length as float:\", len_as_float)\n",
+    "print(\"Length as string:\", len_as_string)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CHECK IF NUMBER IS EVEN OR NOT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55 is even?  False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ask user for input\n",
+    "user_input = input(\"Enter an integer number: \")\n",
+    "\n",
+    "#check for remainder\n",
+    "num1 = int(user_input) % 2 == 0\n",
+    "\n",
+    "print(user_input, \"is even? \",num1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "FLOOR DIVISION AND COMPARISON"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Floor division of 7 by 3 is  2\n",
+      "Integer converted value of 2.7 is  2\n",
+      "Are they equal?  True\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "floor_division = 7 // 3\n",
+    "\n",
+    "# Convert 2.7 to an integer\n",
+    "int_of_2_7 = int(2.7)\n",
+    "\n",
+    "# Compare floor division result is equal to the integer-converted value of 2.7\n",
+    "is_equal = floor_division == int_of_2_7\n",
+    "\n",
+    "print(\"Floor division of 7 by 3 is \",floor_division)\n",
+    "print(\"Integer converted value of 2.7 is \",int_of_2_7)\n",
+    "print(\"Are they equal? \",is_equal)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CHECK TYPE AND COMPARE RESULT: Q19 AND Q20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Type of '10' is equal to type of 10:  False\n",
+      "int('9.8') is equal to 10:  False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check if type of '10' is equal to type of 10\n",
+    "type_check = type('10') == type(10)\n",
+    "\n",
+    "# Check if int('9.8') is equal to 10\n",
+    "conversion_check = int(float('9.8')) == 10\n",
+    "\n",
+    "# print results\n",
+    "print(\"Type of '10' is equal to type of 10: \",type_check)\n",
+    "print(\"int('9.8') is equal to 10: \",conversion_check)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ASK USER FOR INPUT FOR HOURS WORKED AND RATE PER HOUR TO CALCULATE PAY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your weekly earning is  64.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ask user hours worked and rate per hour\n",
+    "hours_worked = input(\"Enter hours worked: \")\n",
+    "rate_per_hour = input(\"Enter rate per hour: \")\n",
+    "\n",
+    "weekly_earning = float(hours_worked) * float(rate_per_hour)\n",
+    "\n",
+    "# print the result\n",
+    "print(\"Your weekly earning is \",weekly_earning)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CALCULATE NUMBER OF SECONDS A PERSON CAN LIVE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You have lived for  1767225600 seconds.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ask user to enter the number of years lived\n",
+    "years_lived = input(\"Enter the number of years you have lived: \")\n",
+    "\n",
+    "# Assume a person can live 100 years\n",
+    "total_years = 100\n",
+    "\n",
+    "# Calculate the number of seconds lived\n",
+    "# Assuming 365.25 days in a year, 24 hours, 60 minute, 60 seconds\n",
+    "seconds_lived = float(years_lived) * 365.25 * 24 * 60 * 60  \n",
+    "\n",
+    "print(\"You have lived for \",int(seconds_lived), \"seconds.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "QUESTION 23: DISPLAY A TABLE AS BELOW"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1 1 1 1\n",
+      "2 1 2 4 8\n",
+      "3 1 3 9 27\n",
+      "4 1 4 16 64\n",
+      "5 1 5 25 125\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print the values to display the table\n",
+    "print(\"1 1 1 1 1\")\n",
+    "print(\"2 1 2 4 8\")\n",
+    "print(\"3 1 3 9 27\")\n",
+    "print(\"4 1 4 16 64\")\n",
+    "print(\"5 1 5 25 125\")\n"
+   ]
   }
  ],
  "metadata": {
