--- a/day_5/day5_assignment.ipynb
+++ b/day_5/day5_assignment.ipynb
@@ -394,43 +394,322 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### EXERCISE LEVEL 2"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The following is a list of 10 students ages:  \n",
+    "ages = [19, 22, 19, 24, 20, 25, 26, 24, 25, 24]  \n",
+    "\n",
+    "Sort the list and find the min and max age  \n",
+    "\n",
+    "Add the min age and the max age again to the list  \n",
+    "\n",
+    "Find the median age (one middle item or two middle items divided by two)  \n",
+    "\n",
+    "Find the average age (sum of all items divided by their number )  \n",
+    "\n",
+    "Find the range of the ages (max minus min)  \n",
+    "\n",
+    "Compare the value of (min - average) and (max - average), use abs() method  \n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List of Ages: [19, 19, 20, 22, 24, 24, 24, 25, 25, 26, 19, 26]\n",
+      "Min Age: 19\n",
+      "Max Age: 26\n",
+      "Median Age: 24.0\n",
+      "Average Age: 22.75\n",
+      "Range of Ages: 7\n",
+      "abs value of Min - Average: 3.75\n",
+      "abs value of Max - Average: 3.25\n",
+      "Are abs value of Min and max equal: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List of student ages\n",
+    "ages = [19, 22, 19, 24, 20, 25, 26, 24, 25, 24]\n",
+    "\n",
+    "# Sort the list to find the min and max age\n",
+    "ages.sort()\n",
+    "\n",
+    "min_age = min(ages)\n",
+    "max_age = max(ages)\n",
+    "\n",
+    "# Add the min age and max age again to the list\n",
+    "ages.extend([min_age, max_age])\n",
+    "\n",
+    "# Find the median age\n",
+    "median_index = len(ages) // 2\n",
+    "median_age = (ages[median_index - 1] + ages[median_index]) / 2\n",
+    "\n",
+    "# Find the average age by summing the ages divide by the count of ages\n",
+    "average_age = sum(ages) / len(ages)\n",
+    "\n",
+    "# Find the range of ages\n",
+    "age_range = max_age - min_age\n",
+    "\n",
+    "# Compare (min - average) and (max - average) using abs()\n",
+    "min_difference = abs(min_age - average_age)\n",
+    "max_difference = abs(max_age - average_age)\n",
+    "\n",
+    "compare_abs = min_difference == max_difference\n",
+    "\n",
+    "# Print the results\n",
+    "print(\"List of Ages:\", ages)\n",
+    "print(\"Min Age:\", min_age)\n",
+    "print(\"Max Age:\", max_age)\n",
+    "print(\"Median Age:\", median_age)\n",
+    "print(\"Average Age:\", average_age)\n",
+    "print(\"Range of Ages:\", age_range)\n",
+    "print(\"abs value of Min - Average:\", min_difference)\n",
+    "print(\"abs value of Max - Average:\", max_difference)\n",
+    "print(\"Are abs value of Min and max equal:\", compare_abs)\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Find the middle country(ies) in the countries list\n",
+    "\n",
+    "Divide the countries list into two equal lists if it is even if not one more country for the first half.\n",
+    "\n",
+    "['China', 'Russia', 'USA', 'Finland', 'Sweden', 'Norway', 'Denmark']. Unpack the first three countries and the rest as scandic countries.\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "countries = ['Afghanistan', 'Albania', 'Algeria','Andorra','Angola', 'Antigua and Barbuda', 'Argentina', 'Armenia', 'Australia', 'Austria',\n",
+    "  'Azerbaijan','Bahamas', 'Bahrain','Bangladesh','Barbados','Belarus',\n",
+    "  'Belgium', 'Belize','Benin',\n",
+    "  'Bhutan',\n",
+    "  'Bolivia',\n",
+    "  'Bosnia and Herzegovina',\n",
+    "  'Botswana',\n",
+    "  'Brazil',\n",
+    "  'Brunei',\n",
+    "  'Bulgaria',\n",
+    "  'Burkina Faso',\n",
+    "  'Burundi',\n",
+    "  'Cambodia',\n",
+    "  'Cameroon',\n",
+    "  'Canada',\n",
+    "  'Cape Verde',\n",
+    "  'Central African Republic',\n",
+    "  'Chad',\n",
+    "  'Chile',\n",
+    "  'China',\n",
+    "  'Colombi',\n",
+    "  'Comoros',\n",
+    "  'Congo (Brazzaville)',\n",
+    "  'Congo',\n",
+    "  'Costa Rica',\n",
+    "  \"Cote d'Ivoire\",\n",
+    "  'Croatia',\n",
+    "  'Cuba',\n",
+    "  'Cyprus',\n",
+    "  'Czech Republic',\n",
+    "  'Denmark',\n",
+    "  'Djibouti',\n",
+    "  'Dominica',\n",
+    "  'Dominican Republic',\n",
+    "  'East Timor (Timor Timur)',\n",
+    "  'Ecuador',\n",
+    "  'Egypt',\n",
+    "  'El Salvador',\n",
+    "  'Equatorial Guinea',\n",
+    "  'Eritrea',\n",
+    "  'Estonia',\n",
+    "  'Ethiopia',\n",
+    "  'Fiji',\n",
+    "  'Finland',\n",
+    "  'France',\n",
+    "  'Gabon',\n",
+    "  'Gambia, The',\n",
+    "  'Georgia',\n",
+    "  'Germany',\n",
+    "  'Ghana',\n",
+    "  'Greece',\n",
+    "  'Grenada',\n",
+    "  'Guatemala',\n",
+    "  'Guinea',\n",
+    "  'Guinea-Bissau',\n",
+    "  'Guyana',\n",
+    "  'Haiti',\n",
+    "  'Honduras',\n",
+    "  'Hungary',\n",
+    "  'Iceland',\n",
+    "  'India',\n",
+    "  'Indonesia',\n",
+    "  'Iran',\n",
+    "  'Iraq',\n",
+    "  'Ireland',\n",
+    "  'Israel',\n",
+    "  'Italy',\n",
+    "  'Jamaica',\n",
+    "  'Japan',\n",
+    "  'Jordan',\n",
+    "  'Kazakhstan',\n",
+    "  'Kenya',\n",
+    "  'Kiribati',\n",
+    "  'Korea, North',\n",
+    "  'Korea, South',\n",
+    "  'Kuwait',\n",
+    "  'Kyrgyzstan',\n",
+    "  'Laos',\n",
+    "  'Latvia',\n",
+    "  'Lebanon',\n",
+    "  'Lesotho',\n",
+    "  'Liberia',\n",
+    "  'Libya',\n",
+    "  'Liechtenstein',\n",
+    "  'Lithuania',\n",
+    "  'Luxembourg',\n",
+    "  'Macedonia',\n",
+    "  'Madagascar',\n",
+    "  'Malawi',\n",
+    "  'Malaysia',\n",
+    "  'Maldives',\n",
+    "  'Mali',\n",
+    "  'Malta',\n",
+    "  'Marshall Islands',\n",
+    "  'Mauritania',\n",
+    "  'Mauritius',\n",
+    "  'Mexico',\n",
+    "  'Micronesia',\n",
+    "  'Moldova',\n",
+    "  'Monaco',\n",
+    "  'Mongolia',\n",
+    "  'Morocco',\n",
+    "  'Mozambique',\n",
+    "  'Myanmar',\n",
+    "  'Namibia',\n",
+    "  'Nauru',\n",
+    "  'Nepal',\n",
+    "  'Netherlands',\n",
+    "  'New Zealand',\n",
+    "  'Nicaragua',\n",
+    "  'Niger',\n",
+    "  'Nigeria',\n",
+    "  'Norway',\n",
+    "  'Oman',\n",
+    "  'Pakistan',\n",
+    "  'Palau',\n",
+    "  'Panama',\n",
+    "  'Papua New Guinea',\n",
+    "  'Paraguay',\n",
+    "  'Peru',\n",
+    "  'Philippines',\n",
+    "  'Poland',\n",
+    "  'Portugal',\n",
+    "  'Qatar',\n",
+    "  'Romania',\n",
+    "  'Russia',\n",
+    "  'Rwanda',\n",
+    "  'Saint Kitts and Nevis',\n",
+    "  'Saint Lucia',\n",
+    "  'Saint Vincent',\n",
+    "  'Samoa',\n",
+    "  'San Marino',\n",
+    "  'Sao Tome and Principe',\n",
+    "  'Saudi Arabia',\n",
+    "  'Senegal',\n",
+    "  'Serbia and Montenegro',\n",
+    "  'Seychelles',\n",
+    "  'Sierra Leone',\n",
+    "  'Singapore',\n",
+    "  'Slovakia',\n",
+    "  'Slovenia',\n",
+    "  'Solomon Islands',\n",
+    "  'Somalia',\n",
+    "  'South Africa',\n",
+    "  'Spain',\n",
+    "  'Sri Lanka',\n",
+    "  'Sudan',\n",
+    "  'Suriname',\n",
+    "  'Swaziland',\n",
+    "  'Sweden',\n",
+    "  'Switzerland',\n",
+    "  'Syria',\n",
+    "  'Taiwan',\n",
+    "  'Tajikistan',\n",
+    "  'Tanzania',\n",
+    "  'Thailand',\n",
+    "  'Togo',\n",
+    "  'Tonga',\n",
+    "  'Trinidad and Tobago',\n",
+    "  'Tunisia',\n",
+    "  'Turkey',\n",
+    "  'Turkmenistan',\n",
+    "  'Tuvalu',\n",
+    "  'Uganda',\n",
+    "  'Ukraine',\n",
+    "  'United Arab Emirates',\n",
+    "  'United Kingdom',\n",
+    "  'United States',\n",
+    "  'Uruguay',\n",
+    "  'Uzbekistan',\n",
+    "  'Vanuatu',\n",
+    "  'Vatican City',\n",
+    "  'Venezuela',\n",
+    "  'Vietnam',\n",
+    "  'Yemen',\n",
+    "  'Zambia',\n",
+    "  'Zimbabwe',\n",
+    "];"
+   ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The middle country is:  Lesotho\n",
+      "First Half: ['Afghanistan', 'Albania', 'Algeria', 'Andorra', 'Angola', 'Antigua and Barbuda', 'Argentina', 'Armenia', 'Australia', 'Austria', 'Azerbaijan', 'Bahamas', 'Bahrain', 'Bangladesh', 'Barbados', 'Belarus', 'Belgium', 'Belize', 'Benin', 'Bhutan', 'Bolivia', 'Bosnia and Herzegovina', 'Botswana', 'Brazil', 'Brunei', 'Bulgaria', 'Burkina Faso', 'Burundi', 'Cambodia', 'Cameroon', 'Canada', 'Cape Verde', 'Central African Republic', 'Chad', 'Chile', 'China', 'Colombi', 'Comoros', 'Congo (Brazzaville)', 'Congo', 'Costa Rica', \"Cote d'Ivoire\", 'Croatia', 'Cuba', 'Cyprus', 'Czech Republic', 'Denmark', 'Djibouti', 'Dominica', 'Dominican Republic', 'East Timor (Timor Timur)', 'Ecuador', 'Egypt', 'El Salvador', 'Equatorial Guinea', 'Eritrea', 'Estonia', 'Ethiopia', 'Fiji', 'Finland', 'France', 'Gabon', 'Gambia, The', 'Georgia', 'Germany', 'Ghana', 'Greece', 'Grenada', 'Guatemala', 'Guinea', 'Guinea-Bissau', 'Guyana', 'Haiti', 'Honduras', 'Hungary', 'Iceland', 'India', 'Indonesia', 'Iran', 'Iraq', 'Ireland', 'Israel', 'Italy', 'Jamaica', 'Japan', 'Jordan', 'Kazakhstan', 'Kenya', 'Kiribati', 'Korea, North', 'Korea, South', 'Kuwait', 'Kyrgyzstan', 'Laos', 'Latvia', 'Lebanon', 'Lesotho']\n",
+      "Second Half: ['Lesotho', 'Liberia', 'Libya', 'Liechtenstein', 'Lithuania', 'Luxembourg', 'Macedonia', 'Madagascar', 'Malawi', 'Malaysia', 'Maldives', 'Mali', 'Malta', 'Marshall Islands', 'Mauritania', 'Mauritius', 'Mexico', 'Micronesia', 'Moldova', 'Monaco', 'Mongolia', 'Morocco', 'Mozambique', 'Myanmar', 'Namibia', 'Nauru', 'Nepal', 'Netherlands', 'New Zealand', 'Nicaragua', 'Niger', 'Nigeria', 'Norway', 'Oman', 'Pakistan', 'Palau', 'Panama', 'Papua New Guinea', 'Paraguay', 'Peru', 'Philippines', 'Poland', 'Portugal', 'Qatar', 'Romania', 'Russia', 'Rwanda', 'Saint Kitts and Nevis', 'Saint Lucia', 'Saint Vincent', 'Samoa', 'San Marino', 'Sao Tome and Principe', 'Saudi Arabia', 'Senegal', 'Serbia and Montenegro', 'Seychelles', 'Sierra Leone', 'Singapore', 'Slovakia', 'Slovenia', 'Solomon Islands', 'Somalia', 'South Africa', 'Spain', 'Sri Lanka', 'Sudan', 'Suriname', 'Swaziland', 'Sweden', 'Switzerland', 'Syria', 'Taiwan', 'Tajikistan', 'Tanzania', 'Thailand', 'Togo', 'Tonga', 'Trinidad and Tobago', 'Tunisia', 'Turkey', 'Turkmenistan', 'Tuvalu', 'Uganda', 'Ukraine', 'United Arab Emirates', 'United Kingdom', 'United States', 'Uruguay', 'Uzbekistan', 'Vanuatu', 'Vatican City', 'Venezuela', 'Vietnam', 'Yemen', 'Zambia', 'Zimbabwe']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find the middle country\n",
+    "middle_index = len(countries) // 2\n",
+    "middle_countries = countries[middle_index] \n",
+    "\n",
+    "print(\"The middle country is: \", middle_countries)\n",
+    "\n",
+    "#Divide the countries list into two equal lists \n",
+    "n = middle_index\n",
+    "first_half = countries[:n] if len(countries) % 2 == 0 else countries[:n + 1]\n",
+    "second_half = countries[n:]\n",
+    "\n",
+    "# Print the divided lists\n",
+    "print(\"First Half:\", first_half)\n",
+    "print(\"Second Half:\", second_half)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
